REGRESSION(r178060): empty arguments are passed when logging to system console https://bugs.webkit.org/show_bug.cgi?id=141511

Reviewed by Timothy Hatcher.

* page/PageConsoleClient.cpp:
(WebCore::PageConsoleClient::messageWithTypeAndLevel): Change premature move to copyRef.


Canonical link: https://commits.webkit.org/159553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179997 268f45cc-cd09-0410-ab3c-d52691b4dbfc